objects/Account_Number__c.object
<CustomObject>
    <label>Account Number</label>
    <nameField>
        <displayFormat>AN-{0000000}</displayFormat>
        <label>Account Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Numbers</relationshipLabel>
        <relationshipName>Account_Number</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exclude_from_Account_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to exclude account number volumes from account calculations</description>
        <inlineHelpText>When selected, volumes associated with account number will not be added to account level calculations</inlineHelpText>
        <label>Exclude from Account Calculation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>